--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/WeldgunTool.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/WeldgunTool.cshtml
@@ -22,4 +22,12 @@ Tool_nr: @Html.DropDownList("tool_nr", null, htmlAttributes: new { @class = "sel
                 $('#welgunToolPlaceholder').html($("#Error", result).html());
             });
     });
+
 </script>
+
+@if (ViewBag.autoload == true)
+{
+    <script>
+        $('#btn_getData').click()
+    </script>
+}
