--- a/EqUiWebUi/Areas/Welding/Views/Ultralog/GetControlPlan.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Ultralog/GetControlPlan.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "ControlPlan";
 }
 
-@MyFilters.IconActionLink(Url.Action("ListControlPlans"), "fas fa-clipboard-list ", "Back to list", "Back to control plan list")
+@MyHtmlHelpers.IconActionLink(Url.Action("ListControlPlans"), "fas fa-clipboard-list ", "Back to list", "Back to control plan list")
 
 <div class="card">
     <div class="card-header">
