--- a/EqUiWebUi/Areas/Welding/Views/WM/WeldfaultIndex.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/WeldfaultIndex.cshtml
@@ -14,7 +14,7 @@
 
 
 
-@MyFilters.IconActionLink(Url.Action("TestProc", new { id = 100 }), "fas fa-fire", "", "Test fire", classes: "JQresultTriggerBtn")
+@MyHtmlHelpers.IconActionLink(Url.Action("TestProc", new { id = 100 }), "fas fa-fire", "", "Test fire", classes: "JQresultTriggerBtn")
 
 @section scripts{
     <script src="~/node_modules/jquery-jeditable/dist/jquery.jeditable.min.js"></script>
