--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -19,10 +19,10 @@
         <hr />
         <h4>Data classification system</h4>
         @MyHtmlHelpers.EquiLink("/Classification/ClassificationTool", "fas fa-random", "Classification tool", helperText: "Tool for classification of data (put data in a 'class' and 'subgroup' manualiy or by makeing classification rules)")
-        <p>@MyFilters.IconActionLink("/c_logclasssystem/Index", "fas fa-cogs", "Classification systems", "Manage classification systems")</p>
-        <p>@MyFilters.IconActionLink("/c_LogclassRules/Index", "fas fa-list-ul", "Classification rules", "Manage classification rules")</p>
-        <p>@MyFilters.IconActionLink("/c_Classification/Index", "fas fa-list-ul", "Classes", "Manage classification 'classes'")</p>
-        <p>@MyFilters.IconActionLink("/c_Subgroup/Index", "fas fa-list-ul", "Subgroups", "Manage classification 'subgroups'")</p>
+        <p>@MyHtmlHelpers.IconActionLink("/c_logclasssystem/Index", "fas fa-cogs", "Classification systems", "Manage classification systems")</p>
+        <p>@MyHtmlHelpers.IconActionLink("/c_LogclassRules/Index", "fas fa-list-ul", "Classification rules", "Manage classification rules")</p>
+        <p>@MyHtmlHelpers.IconActionLink("/c_Classification/Index", "fas fa-list-ul", "Classes", "Manage classification 'classes'")</p>
+        <p>@MyHtmlHelpers.IconActionLink("/c_Subgroup/Index", "fas fa-list-ul", "Subgroups", "Manage classification 'subgroups'")</p>
     </div>
 </div>
 
