--- a/EqUiWebUi/Views/Wikis/ShowWiki.cshtml
+++ b/EqUiWebUi/Views/Wikis/ShowWiki.cshtml
@@ -21,7 +21,7 @@
         }
     </div>
     <div class="card-footer">
-        @MyFilters.IconActionLink(Url.Action("Edit", new { id = Model.id }), "fas fa-pencil-alt", "", "Edit this wiki")
+        @MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = Model.id }), "fas fa-pencil-alt", "", "Edit this wiki")
     </div>
 </div>
 
