--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_ControlLimitsGrid.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/_ControlLimitsGrid.cshtml
@@ -16,7 +16,7 @@
     columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id, closeOnSave = true }), "fas fa-pencil-alt", "", "Edit this controllimit", enabeld: !c.isdead, classes: "OpenNewWindow")
+                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id, closeOnSave = true }), "fas fa-pencil-alt", "", "Edit this controllimit", enabeld: !c.isdead, classes: "OpenNewWindow")
                 ).Filterable(false);
 
 }).Filterable().Sortable().Pageable(pager =>
