--- a/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
@@ -34,9 +34,9 @@
     columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit") + "|" +
-                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fa fa-trash", "", "Delete") + "|" +
-                 MyFilters.IconActionLink(Url.Action("TestSMS", new { system = c.System }), "fas fa-phone-square", "", "TestSMS",classes:"JQresultTriggerBtn")
+                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit") + "|" +
+                 MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fa fa-trash", "", "Delete") + "|" +
+                 MyHtmlHelpers.IconActionLink(Url.Action("TestSMS", new { system = c.System }), "fas fa-phone-square", "", "TestSMS",classes:"JQresultTriggerBtn")
                     ).Filterable(false);
 
 }).Filterable().Sortable().Pageable(pager =>
