--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/_List.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/_List.cshtml
@@ -14,9 +14,9 @@
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this trigger").ToHtmlString() +
-                                 MyFilters.IconActionLink(Url.Action("Index", "h_alert", new { c_trigger_id = c.id }), "fas fa-eye", "", "Show h_alert").ToHtmlString() +
-                                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString() +
-                                 MyFilters.IconActionLink(Url.Action("RunAlertTrigger", new { triggerID = c.id }), "fas fa-fire", "", "Test fire",classes: "JQresultTriggerBtn").ToHtmlString()
+                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this trigger").ToHtmlString() +
+                                 MyHtmlHelpers.IconActionLink(Url.Action("Index", "h_alert", new { c_trigger_id = c.id }), "fas fa-eye", "", "Show h_alert").ToHtmlString() +
+                                 MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString() +
+                                 MyHtmlHelpers.IconActionLink(Url.Action("RunAlertTrigger", new { triggerID = c.id }), "fas fa-fire", "", "Test fire",classes: "JQresultTriggerBtn").ToHtmlString()
                 ).Filterable(false);
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
