--- a/EqUiWebUi/Areas/HangfireArea/Views/c_job/_List.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/c_job/_List.cshtml
@@ -15,7 +15,7 @@
     columns.Add(c => c.id)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => @MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "").ToHtmlString() +
-                                 @MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString()
+                .RenderedAs(c => @MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "").ToHtmlString() +
+                                 @MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString()
                 ).Filterable(false);
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
