--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -5,7 +5,7 @@
 <div class="card">
     <div class="card-header bg-dark text-white row">        
         <h4 class="col-8">Current electrode status</h4>
-        @MyFilters.IconActionLink(Url.Action("PlanTipChange"),"fab fa-stack-exchange","Plan electrode change", "Go to electrode change planning tool",classes:"")
+        @MyHtmlHelpers.IconActionLink(Url.Action("PlanTipChange"),"fab fa-stack-exchange","Plan electrode change", "Go to electrode change planning tool",classes:"")
     </div>
 
     <div class="mvc-grid" data-name="TipStatusGrid"></div>
