--- a/EqUiWebUi/Areas/Welding/Views/WM/_rt_alarm.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/_rt_alarm.cshtml
@@ -23,7 +23,7 @@
     columns.Add(c => c)
                   .Titled("")
                  .Encoded(false)
-                 .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this"));
+                 .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this"));
 
 
 }).Filterable().Pageable(pager =>
