--- a/EqUiWebUi/Views/c_LogClassRules/_GetLogClassRulesGrid.cshtml
+++ b/EqUiWebUi/Views/c_LogClassRules/_GetLogClassRulesGrid.cshtml
@@ -13,8 +13,8 @@
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id}), "fas fa-pencil-alt", "", "Edit this rule", classes: "OpenNewWindow") + " | " +
-                                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete this rule", classes: "OpenNewWindow")
+                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id}), "fas fa-pencil-alt", "", "Edit this rule", classes: "OpenNewWindow") + " | " +
+                                 MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete this rule", classes: "OpenNewWindow")
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
