--- a/EqUiWebUi/Views/c_Subgroup/Index.cshtml
+++ b/EqUiWebUi/Views/c_Subgroup/Index.cshtml
@@ -10,8 +10,8 @@
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this rule") + " | " +
-                                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete this rule")
+                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this rule") + " | " +
+                                 MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete this rule")
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
