--- a/EqUiWebUi/Views/c_housekeeping/_L_housekeeping.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/_L_housekeeping.cshtml
@@ -12,7 +12,7 @@
     columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(System.Configuration.ConfigurationManager.AppSettings["HangfireDetailsBasepath"].ToString() + c.nJobID, "fas fa-user-md", "", "Goto hangfire") 
+                .RenderedAs(c => MyHtmlHelpers.IconActionLink(System.Configuration.ConfigurationManager.AppSettings["HangfireDetailsBasepath"].ToString() + c.nJobID, "fas fa-user-md", "", "Goto hangfire") 
                 ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
