--- a/EqUiWebUi/Views/c_housekeeping/_List.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/_List.cshtml
@@ -12,8 +12,8 @@
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
-                    .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this") + " | " +
-                                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete this")
+                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this") + " | " +
+                                 MyHtmlHelpers.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete this")
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
