--- a/EqUiWebUi/Areas/Welding/Views/WM/_rt_alarm.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/_rt_alarm.cshtml
@@ -57,8 +57,7 @@
                 //animation
                 $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
-                var url = "@Url.Action("_alarmdetails")?id=" + data["id"];
-                $("#placeholderPartial").load(url);
+                $("#placeholderPartial").load("@Url.Action("_alarmdetails")", { id: data["id"]});
             }
         });
 
