--- a/EqUiWebUi/Content/TableRowStyles.css
+++ b/EqUiWebUi/Content/TableRowStyles.css
@@ -7,6 +7,10 @@
     background-color: #16dd76;
 }
 
+.TableLogtypeLightBlue {
+    background-color: #b0f1cd;
+}
+
 .TableLogtypeOrange {
     background-color: rgba(243, 124, 9, 0.87);
 }
