--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Index.cshtml
@@ -28,7 +28,9 @@
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-}).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
+}).Empty("Did not find anything").Css("table-hover"))
 
 
 @section scripts{
@@ -38,7 +40,7 @@
         $("#allcontent").removeClass("container");
 
         //subscribe to row clicked events
-        $('.mvc-grid').mvcgrid({
+        $('[data-name="h_alert"]').mvcgrid({
             rowClicked: function (row, data, e) {
                 //ignore clicks not on td
                 console.log(e.target.tagName);
@@ -60,8 +62,7 @@
                 //animation
                 $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
-                var url = "@Url.Action("_Details","Alert",new {Area = "Alert" })?id=" + data["id"];
-                $("#placeholderPartial").load(url);
+                $("#placeholderPartial").load("@Url.Action("_Details", "Alert", new { Area = "Alert" })", { id: data["id"] });
             },
             reloadFailed: function (result) {
                 console.log(result);
