--- a/EqUiWebUi/Areas/HangfireArea/Views/c_schedule/Index.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/c_schedule/Index.cshtml
@@ -51,9 +51,7 @@
                 //animation
                 $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
-                console.log(data);
-                var url = "@Url.Action("_JobList")?c_schedule_id=" + data["id"];
-                $("#placeholderPartial").load(url);
+                $("#placeholderPartial").load("@Url.Action("_JobList")", { c_schedule_id : data["id"] });
             }
         });
 
