--- a/EqUiWebUi/Areas/Welding/Views/WM/_rt_job1.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/_rt_job1.cshtml
@@ -47,8 +47,7 @@
                 //animation
                 $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
-                var url = "@Url.Action("_jobdetails1")?id=" + data["id"];
-                $("#placeholderPartial").load(url);
+                $("#placeholderPartial").load("@Url.Action("_jobdetails")", { id: data["id"]);
             }
         });
 
