--- a/EqUiWebUi/Views/c_housekeeping/Index.cshtml
+++ b/EqUiWebUi/Views/c_housekeeping/Index.cshtml
@@ -36,8 +36,7 @@
                 //animation
                 $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
-                var url = "@Url.Action("_L_housekeeping")?c_houseKeeping_id=" + data["id"];
-                $("#placeholderPartial").load(url);
+                $("#placeholderPartial").load("@Url.Action("_L_housekeeping")", { c_houseKeeping_id : data["id"] });
             }
         });
 
