--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
@@ -20,18 +20,18 @@
                  .Encoded(false)
                  .Filterable(false)
                  .Sortable(false)
-                 .RenderedAs(c => MyFilters.TipMonitorIcon(c.Status, c.RobotWear));
+                 .RenderedAs(c => TiplifeHtmlHelpers.TipMonitorIcon(c.Status, c.RobotWear));
     //launch sbcu tool
     columns.Add()
                      .Encoded(false)
                      .Filterable(false)
                      .Sortable(false)
-                     .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("WeldgunTool", "NgacElectrode", new { Area = "Tiplife", location = c.Robot, tool_nr = c.Tool_Nr }), "fas fa-chart-line", "", "Launch WeldgunTool").ToHtmlString()); 
+                     .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("WeldgunTool", "NgacElectrode", new { Area = "Tiplife", location = c.Robot, tool_nr = c.Tool_Nr }), "fas fa-chart-line", "", "Launch WeldgunTool").ToHtmlString());
 }).Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
 
-}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleByWearValue(row.pWear, row.nDress, row.nRcars, row.Status))
+}).Empty("No data found").Css("table-hover").RowCss(row => EqUiWebUi.Areas.Tiplife.TiplifeHelpers.getRowStyleByWearValue(row.pWear, row.nDress, row.nRcars, row.Status))
 
