--- a/EqUiWebUi/Areas/Alert/Views/Alert/_Legend.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_Legend.cshtml
@@ -8,21 +8,21 @@
         </tr>
         <tr>
             <td>WGK</td>
-            <td class="@MyRowStyling.getRowStyleStatus("WGK")"></td>
+            <td class="@EqUiWebUi.Areas.Alert.AlertHelpers.getRowStyleStatus("WGK")"></td>
             <td>Alert is active and waiting for user action</td>
         </tr>
         <tr>
             <td>OKREQ</td>
-            <td class="@MyRowStyling.getRowStyleStatus("OKREQ")"></td>
+            <td class="@EqUiWebUi.Areas.Alert.AlertHelpers.getRowStyleStatus("OKREQ")"></td>
             <td>Alert is active and has been accepted by user action</td>
         <tr>
             <td>COMP</td>
-            <td class="@MyRowStyling.getRowStyleStatus("COMP")"></td>
+            <td class="@EqUiWebUi.Areas.Alert.AlertHelpers.getRowStyleStatus("COMP")"></td>
             <td>Alert is no longer active and completed (set by user)</td>
         </tr>
         <tr>
             <td>TECHCOMP</td>
-            <td class="@MyRowStyling.getRowStyleStatus("TECHCOMP")"></td>
+            <td class="@EqUiWebUi.Areas.Alert.AlertHelpers.getRowStyleStatus("TECHCOMP")"></td>
             <td>Alert is no longer active and completed (set by server)</td>
         </tr>
     </table>
