--- a/EqUiWebUi/Areas/Supervision/Views/Table/_Legend.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/_Legend.cshtml
@@ -10,27 +10,27 @@
         </tr>
         <tr>
             <td>LIVE</td>
-            <td class="@MyRowStyling.getRowStyleLogtype("LIVE")"></td>
+            <td class="@EqUiWebUi.Areas.Supervision.SupervisionHelpers.getRowStyleLogtype("LIVE")"></td>
             <td>marks a breakdown that is ongoing </td>
         </tr>
         <tr>
             <td>BREAKDOWN</td>
-            <td class="@MyRowStyling.getRowStyleLogtype("BREAKDOWN")"></td>
+            <td class="@EqUiWebUi.Areas.Supervision.SupervisionHelpers.getRowStyleLogtype("BREAKDOWN")"></td>
             <td>marks a breakdown (robot) that has been resolved</td>
         </tr>
         <tr>
             <td>STOerror</td>
-            <td class="@MyRowStyling.getRowStyleLogtype("STOerror")"></td>
+            <td class="@EqUiWebUi.Areas.Supervision.SupervisionHelpers.getRowStyleLogtype("STOerror")"></td>
             <td>marks a breakdown (plc) that has been resolved</td>
         </tr>
         <tr>
             <td>TIMELINE</td>
-            <td class="@MyRowStyling.getRowStyleLogtype("TIMELINE")"></td>
+            <td class="@EqUiWebUi.Areas.Supervision.SupervisionHelpers.getRowStyleLogtype("TIMELINE")"></td>
             <td>marks begin of each new production shift</td>
         </tr>
         <tr>
             <td>ALERT</td>
-            <td class="@MyRowStyling.getRowStyleLogtype("ALERT")"></td>
+            <td class="@EqUiWebUi.Areas.Supervision.SupervisionHelpers.getRowStyleLogtype("ALERT")"></td>
             <td>marks a alert that has been resolved (see below for active alerts)</td>
         </tr>
     </table>
