--- a/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/Electrode/_TipStatus.cshtml
@@ -20,7 +20,7 @@
                  .Encoded(false)
                  .Filterable(false)
                  .Sortable(false)
-                 .RenderedAs(c => TiplifeHelpers.TipMonitorIcon(c.Status, c.RobotWear));
+                 .RenderedAs(c => TiplifeHtmlHelpers.TipMonitorIcon(c.Status, c.RobotWear));
     //launch sbcu tool
     columns.Add()
                      .Encoded(false)
