--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -94,7 +94,7 @@
                 //animation
                 $("#placeholderPartial").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
                 //load url in placeholder
-                $("#placeholderPartial").load("@Url.Action("_woDetails", "WorkorderDetails")", { RealtimeConn:  @Model.realtimeConn, wonum: data["w-o-n-u-m"]});
+                $("#placeholderPartial").load("@Url.Action("_woDetails", "WorkorderDetails")", { RealtimeConn:  @Model.realtimeConn.ToString().ToLower(), wonum: data["w-o-n-u-m"]});
             },
             reloadEnded: function () {
                 //simulate click on first row so that the details load automatic IF ROWCOUNT == 1
