--- a/EqUiWebUi/Areas/Supervision/Views/Table/_ploegRapportGrid.cshtml
+++ b/EqUiWebUi/Areas/Supervision/Views/Table/_ploegRapportGrid.cshtml
@@ -19,4 +19,4 @@
     pager.RowsPerPage = 20;
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
-}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleLogtype(row.animation))
+}).Empty("No data found").Css("table-hover").RowCss(row => EqUiWebUi.Areas.Supervision.SupervisionHelpers.getRowStyleLogtype(row.animation))
